@@ -1,4 +1,7 @@
 Changes with Apache 1.3a2
+  
+  *) Fix a bug introduced in 1.3a1 directory_walk regarding .htaccess files
+     and corrupted paths.  [Dean Gaudet]
 
   *) Enhanced and cleaned up the URL rewriting engine of mod_rewrite:
      First the grouped parts of RewriteRule pattern matches (parenthesis!) can
